fix: trying to fix position of pokemon img on mobile android devices

--- a/src/app/components/pokemon-details/pokemon-details.component.scss
+++ b/src/app/components/pokemon-details/pokemon-details.component.scss
@@ -37,7 +37,7 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    top: 20%;
+    top: 17%;
 
     > img {
       width: 170px;
